# mcpsmith

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  NEXT-STEPS.md  PLAN.md  README.md  dist-workspace.toml  llms.txt
.github/workflows/: ci.yml  live-smoke.yml  release.yml
crates/mcpsmith-core/: Cargo.toml
crates/mcpsmith-core/src/: apply.rs  backend.rs  catalog.rs  contract.rs  diagnostics.rs  dossier.rs  install.rs  inventory.rs  lib.rs  pipeline.rs  runtime.rs  skillset.rs  source.rs  v3.rs
crates/mcpsmith-core/tests/: evidence_deterministic.rs  module_smoke.rs
docs/: architecture.md  release-checklist.md
examples/: sample-contract-report.json  sample-dossier.json  sample-mcp-config.json  sample-review.json  sample-run-report.json  sample-skill-pack-tree.txt
scripts/: local-checks.sh
scripts/release/: render-homebrew-formula.sh
scripts/smoke/: cli_verify_smoke.sh  common.sh  live_public_mcp.sh  mock_fixture_flow.sh  smoke-test-installed-mcpsmith.sh
src/: main.rs
src/commands/: agentic.rs  convert.rs  mod.rs
src/config/: mod.rs
tests/: cli.rs  repo_bootstrap.rs  smoke_assets.rs
tests/fixtures/live/: chrome-devtools-smoke.dossier.json  chrome-devtools-smoke.review.json  memory-smoke.dossier.json  memory-smoke.review.json  xcodebuildmcp-smoke.dossier.json  xcodebuildmcp-smoke.review.json
tests/support/: mod.rs
