[package]
name = "mcpsmith"
version = "0.1.0"
edition = "2024"
description = "Convert MCP servers into standalone skill packs with runtime contract probes"
license = "MIT"
repository = "https://github.com/nclandrei/mcpsmith"
homepage = "https://github.com/nclandrei/mcpsmith"
readme = "README.md"
authors = ["Andrei Nicolae"]
keywords = ["mcp", "skills", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["crates/mcpsmith-core"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mcpsmith-core = { path = "crates/mcpsmith-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
