[package]
name = "mcpsmith"
version = "0.2.0"
edition = "2024"
description = "Convert MCP servers into source-grounded skill packs with staged review and verify steps"
license = "MIT"
repository = "https://github.com/nclandrei/mcpsmith"
homepage = "https://github.com/nclandrei/mcpsmith"
readme = "README.md"
authors = ["Andrei Nicolae"]
keywords = ["mcp", "skills", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mcpsmith"
path = "src/main.rs"

[workspace]
members = ["crates/mcpsmith-core"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = "0.4"
mcpsmith-core = { version = "0.2.0", path = "crates/mcpsmith-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
installers = ["shell"]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
