[package]
name = "mcpsmith-core"
version = "0.1.0"
edition = "2024"
description = "Core MCP conversion planning, runtime contract testing, and apply logic for mcpsmith"
license = "MIT"
repository = "https://github.com/nclandrei/mcpsmith"
homepage = "https://github.com/nclandrei/mcpsmith"
readme = "../../README.md"
authors = ["Andrei Nicolae"]
keywords = ["mcp", "skills", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
