[package]
name = "mcpsmith-core"
version = "0.1.0"
edition = "2024"
description = "Core staged pipeline for resolving, grounding, reviewing, and installing mcpsmith conversions"
license = "MIT"
repository = "https://github.com/nclandrei/mcpsmith"
homepage = "https://github.com/nclandrei/mcpsmith"
readme = "../../README.md"
authors = ["Andrei Nicolae"]
keywords = ["mcp", "skills", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
